fixed ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ bin/
 RTovi/.Rhistory
 RTovi/RTovi/RTovi.Rproj
 RTovi/RTovi/.Rproj.user
+.Rproj.user
+RTovi.Rproj
+RTovi/RTovi/.Rhistory
+RTovi/RTovi/.Rbuildignore
+RTovi/.Rhistory
