--- a/RTovi/RTovi/DESCRIPTION
+++ b/RTovi/RTovi/DESCRIPTION
@@ -9,7 +9,7 @@ Description: An R wrapper package for interacting with R Eddy Covariance
     related tools and the Tovi data analysis software by LI-COR Biosciences.
 URL: https://www.licor.com/tovi/
 License: GPL (>= 2)
-Imports: REddyProc, ncdf4, rjson, httr
+Imports: REddyProc, ncdf4, httr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
